made navgraph ,started with adapters

--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -39,6 +39,13 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvChar"
+
+            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            tools:orientation="vertical"
+            tools:scrollbars="vertical"
+            tools:spanCount="3"
+            tools:itemCount="15"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="20dp"
