--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,11 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/navHostFragment"
-            android:name="com.anubhav.marvelcharactersapp.ui.fragments.HomeFragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/nav_graph"
             />
 
 
