--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -45,10 +45,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
-                android:gravity="center_horizontal||center_vertical"
+                android:gravity="center"
                 android:background="#36353C"
                 android:orientation="horizontal"
-                android:textAlignment="center"
                 >
 
                 <TextView
