--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -48,20 +48,26 @@
                 android:gravity="center"
                 android:background="#36353C"
                 android:orientation="horizontal"
+                android:layout_gravity="center"
                 >
 
                 <TextView
                     android:id="@+id/itemName_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Iron Man"
+                    android:textAllCaps="true"
+                    android:layout_centerInParent="true"
+                    android:singleLine="true"
+                    android:scrollHorizontally="true"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:ellipsize="marquee"
+                    android:fadingEdge="horizontal"
                     android:textColor="@color/white"
-                    android:textSize="8sp"
+                    android:textSize="10sp"
                     android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
-    C
 </androidx.constraintlayout.widget.ConstraintLayout>
