--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="0dp">
+    android:padding="0dp"
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
